# codespheres-tracy

./: CHANGELOG.md  README.md  REPORT.md  gradle.properties  settings.gradle.kts
docs/: pyproject.toml
eval/: build.gradle.kts
examples/: build.gradle.kts
plugin/gradle-tracy-plugin/: build.gradle.kts
plugin/tracy-compiler-plugin-2.0.0/: build.gradle.kts
plugin/tracy-compiler-plugin-2.0.20/: build.gradle.kts
plugin/tracy-compiler-plugin-2.1.0/: build.gradle.kts
plugin/tracy-compiler-plugin-2.1.20/: build.gradle.kts
plugin/tracy-compiler-plugin-2.2.0/: build.gradle.kts
plugin/tracy-compiler-plugin-2.2.20/: build.gradle.kts
plugin/tracy-compiler-plugin-2.3.0/: build.gradle.kts
tracing/anthropic/: build.gradle.kts
tracing/anthropic/src/jvmTest/kotlin/org/jetbrains/ai/tracy/anthropic/: AnthropicAdapterAttributesTest.kt  AnthropicApiTypeDetectionTest.kt  AnthropicBatchTracingTest.kt  AnthropicBatchesSDKClientTracingTest.kt  AnthropicBatchesTracingAdapterTest.kt  AnthropicBatchesTracingTest.kt  AnthropicClientInstrumentationTest.kt  AnthropicCountTokensTracingTest.kt  AnthropicEndpointHandlersMockTest.kt  AnthropicFilesTracingTest.kt  AnthropicLLMTracingAdapterTest.kt  AnthropicListEndpointHandlerTest.kt  AnthropicListEndpointTracingTest.kt  AnthropicMessagesStreamingTracingTest.kt  AnthropicModelsHandlerTest.kt  AnthropicModelsTracingTest.kt  AnthropicOutputTypeTest.kt  (+2 more)
tracing/core/: build.gradle.kts
tracing/gemini/: build.gradle.kts
tracing/ktor/: build.gradle.kts
tracing/openai/: build.gradle.kts
tracing/test-utils/: build.gradle.kts
(+212 files in other folders)
