[project]
name = "docs"
# keep synced with the library version
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "urllib3==2.6.3",
    "mkdocs-material==9.6.19",
    "mkdocs-redirects==1.2.2",
    "mkdocs-llmstxt==0.3.1",
    "mkdocs-macros-plugin>=1.4.0",
    "mkdocs-autorefs>=1.4.3",
]
